# swarm_logger

./: CMakeLists.txt  README.md
cmake/: FindPoco.cmake
include/: CMakeLists.txt
include/swarm/: Application.h  Exception.h  Logger.h
src/: CMakeLists.txt  Logger.cpp
src/application/: Application.cpp
src/common/: Exception.cpp
src/example/: CMakeLists.txt  application.cpp  logger.cpp  main.cpp
src/logger/: Logger.cpp
